# metalib2

./: changelog.md  environment.yml  pyproject.toml  roadmap.md
metalib2/: __init__.py
src/metalib2/: __init__.py  queries.py
tests/: conftest.py  test_metdata_access.py  test_metdata_query.py  test_resolvers.py
